forgot to add last touch to buttons

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CodeWell Challenge Alan Paccor</title>
 </head>
 <body>
 <!-- /* ==================================================================NAVBAR============================================================== */ -->
@@ -161,10 +161,10 @@
         <div id="linksSpacing" class="Links"><a class="products" href="/">Other Links</a></div>
     </div>
             <div class="SignButtons">
-                <button class="sign">
+                <button href="#" class="sign">
                     Sign in
                 </button>
-                <button class="tryFree">
+                <button href="#" class="tryFree">
                     Try for free
                 </button>
             </div>
@@ -191,7 +191,7 @@
                     </p>
                 </div>
                 <div class="textButton">
-                    <button class="tryFree2">Try for free</button>
+                    <button href="#" class="tryFree2">Try for free</button>
                 </div>
                 <div class="rating">
                     <p class="ratingText">5.0 Rating based on reviews from: &nbsp;
